--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,11 +10,92 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/master.css">
-  </head>
-  <body>
+</head>
 
+<body>
+    <header>
+        <span class="jumbo">Word of Rhymes</span>
+    </header>
+    <main>
+        <div class="w3-row">
+            <div class="w3-col m8 w3-padding contents-wrapper">
+                <div class="w3-padding contents-container">
+                    <div class="contents w3-padding w3-margin">
+                        <h1>Fight back</h1>
+                        <h5>Anonymous</h5>
+                        <p>
+                            Story begins with no words said, no deeds done, <br> Then how come the blames are blamed and I am the one<br> Feeling the wrath of the family, it’s anarchy,<br> Dealing daily with partiality, oh the patriarchy,<br> Growing
+                            up thinking you’re something special,<br> Crush the expectations put up to you like a wall,<br> Just like a warrior, yes I was a fighter in my mind,<br> Only to be reminded that I’m not one of their kind,<br> It needs more
+                            than just strength, the man muscles,<br> Wasn’t even given a chance to show the hustle,<br> I was deemed useless, pathetic, a loser in life<br> It wasn’t my choice, someone lost their daughter, someone their wife,<br> It was
+                            a show, to let everybody know,<br> that we’re glad, proud even to have someone like you,<br> But behind the locked doors of the house, I was still living in a sewage like a mouse,<br> Seen those tied up luggage on the end of
+                            a stick?<br> Seen those faces which feel like they were hit with a brick?<br> All this time thinking the love was for me and I could reach it<br> Only to realise it wasn’t meant to be cuz they were forced to do it<br> I used
+                            to be loved, adored, pampered and cared for<br> Who knew I’d be the one taking it granted for some bullshit reason that cannot be solved<br> So bad I wasn’t even thought of in the final decision far from involved,<br> And oh
+                            how they ended up looking down on me<br> It's just sad to see people are waiting to be disappointed in me<br> “Oh but tell me what did I do wrong to deserve this pain?”<br> “You don’t belong amongst us, understand? You ruined
+                            this white sheet of a thing like a stain.”<br> Constantly hearing things like that broke the confidence I had<br> Yet invisible for everyone to see how torn up I was or sad<br> Broke me down into pieces but fighting against
+                            me they were still<br> It's been said to me as if it's some prophecy I'm here to fulfil<br> No I’m done, I’m not here to do this anymore,<br> If you can’t accept me, leave that attitude out the door,<br> If this was right for
+                            me I wouldn’t feel so differently than what you claim I should be feeling and that I should be<br> kneeling to every single one of your “advice” but you know what? Kiss my ass goodbye.<br>
+                        </p>
+                    </div>
+                    <div class="contents w3-padding w3-margin">
+                        <h1>Fight back</h1>
+                        <h5>Anonymous</h5>
+                        <p>
+                            Story begins with no words said, no deeds done, <br> Then how come the blames are blamed and I am the one<br> Feeling the wrath of the family, it’s anarchy,<br> Dealing daily with partiality, oh the patriarchy,<br> Growing
+                            up thinking you’re something special,<br> Crush the expectations put up to you like a wall,<br> Just like a warrior, yes I was a fighter in my mind,<br> Only to be reminded that I’m not one of their kind,<br> It needs more
+                            than just strength, the man muscles,<br> Wasn’t even given a chance to show the hustle,<br> I was deemed useless, pathetic, a loser in life<br> It wasn’t my choice, someone lost their daughter, someone their wife,<br> It was
+                            a show, to let everybody know,<br> that we’re glad, proud even to have someone like you,<br> But behind the locked doors of the house, I was still living in a sewage like a mouse,<br> Seen those tied up luggage on the end of
+                            a stick?<br> Seen those faces which feel like they were hit with a brick?<br> All this time thinking the love was for me and I could reach it<br> Only to realise it wasn’t meant to be cuz they were forced to do it<br> I used
+                            to be loved, adored, pampered and cared for<br> Who knew I’d be the one taking it granted for some bullshit reason that cannot be solved<br> So bad I wasn’t even thought of in the final decision far from involved,<br> And oh
+                            how they ended up looking down on me<br> It's just sad to see people are waiting to be disappointed in me<br> “Oh but tell me what did I do wrong to deserve this pain?”<br> “You don’t belong amongst us, understand? You ruined
+                            this white sheet of a thing like a stain.”<br> Constantly hearing things like that broke the confidence I had<br> Yet invisible for everyone to see how torn up I was or sad<br> Broke me down into pieces but fighting against
+                            me they were still<br> It's been said to me as if it's some prophecy I'm here to fulfil<br> No I’m done, I’m not here to do this anymore,<br> If you can’t accept me, leave that attitude out the door,<br> If this was right for
+                            me I wouldn’t feel so differently than what you claim I should be feeling and that I should be<br> kneeling to every single one of your “advice” but you know what? Kiss my ass goodbye.<br>
+                        </p>
+                    </div>
+                    <div class="contents w3-padding w3-margin">
+                        <h1>Fight back</h1>
+                        <h5>Anonymous</h5>
+                        <p>
+                            Story begins with no words said, no deeds done, <br> Then how come the blames are blamed and I am the one<br> Feeling the wrath of the family, it’s anarchy,<br> Dealing daily with partiality, oh the patriarchy,<br> Growing
+                            up thinking you’re something special,<br> Crush the expectations put up to you like a wall,<br> Just like a warrior, yes I was a fighter in my mind,<br> Only to be reminded that I’m not one of their kind,<br> It needs more
+                            than just strength, the man muscles,<br> Wasn’t even given a chance to show the hustle,<br> I was deemed useless, pathetic, a loser in life<br> It wasn’t my choice, someone lost their daughter, someone their wife,<br> It was
+                            a show, to let everybody know,<br> that we’re glad, proud even to have someone like you,<br> But behind the locked doors of the house, I was still living in a sewage like a mouse,<br> Seen those tied up luggage on the end of
+                            a stick?<br> Seen those faces which feel like they were hit with a brick?<br> All this time thinking the love was for me and I could reach it<br> Only to realise it wasn’t meant to be cuz they were forced to do it<br> I used
+                            to be loved, adored, pampered and cared for<br> Who knew I’d be the one taking it granted for some bullshit reason that cannot be solved<br> So bad I wasn’t even thought of in the final decision far from involved,<br> And oh
+                            how they ended up looking down on me<br> It's just sad to see people are waiting to be disappointed in me<br> “Oh but tell me what did I do wrong to deserve this pain?”<br> “You don’t belong amongst us, understand? You ruined
+                            this white sheet of a thing like a stain.”<br> Constantly hearing things like that broke the confidence I had<br> Yet invisible for everyone to see how torn up I was or sad<br> Broke me down into pieces but fighting against
+                            me they were still<br> It's been said to me as if it's some prophecy I'm here to fulfil<br> No I’m done, I’m not here to do this anymore,<br> If you can’t accept me, leave that attitude out the door,<br> If this was right for
+                            me I wouldn’t feel so differently than what you claim I should be feeling and that I should be<br> kneeling to every single one of your “advice” but you know what? Kiss my ass goodbye.<br>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="w3-col m4 w3-padding">
+                <div class="w3-padding w3-container">
+                    <ul class="collection">
+                        <li class="collection-item">
+                            <input type="text" id="searchbox" onkeyup="listFilter()" placeholder="Search for poems..">
+                        </li>
+                    </ul>
+
+                    <ul id="poemlist" class="collection">
+                        <li class="collection-item"><a href="#">Poem1</a></li>
+                        <li class="collection-item"><a href="#">Poem2</a></li>
+                        <li class="collection-item"><a href="#">Poem3</a></li>
+                        <li class="collection-item"><a href="#">Poem4</a></li>
+                        <li class="collection-item"><a href="#">Poem5</a></li>
+                        <li class="collection-item"><a href="#">Poem6</a></li>
+                        <li class="collection-item"><a href="#">Poem7</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
