--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <span class="jumbo">Word of Rhymes</span>
+        <a class="jumbo" href="/">Word of Rhymes</a>
     </header>
     <main>
         <div class="w3-row">
@@ -42,6 +42,7 @@
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="js/main.js"></script>
 </body>
 
