--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Why5</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a class="jumbo" href="/">Word of Rhymes</a>
+        <a class="jumbo" href="/">Why5</a>
     </header>
     <main>
         <div class="w3-row">
@@ -22,17 +22,16 @@
                 <div class="w3-padding contents-container">
 
                 </div>
-
             </div>
             <div class="w3-col m4 w3-padding">
                 <div class="w3-padding w3-container">
                     <ul class="collection">
                         <li class="collection-item">
-                            <input type="text" id="searchbox" onkeyup="listFilter()" placeholder="Search for poems..">
+                            <input type="text" id="searchbox" onkeyup="listFilter()" placeholder="Search for posts..">
                         </li>
                     </ul>
 
-                    <ul id="poemlist" class="collection">
+                    <ul id="postlist" class="collection">
 
                     </ul>
                 </div>
