--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <a class="jumbo" href="/">Why5</a>
     </header>
+    <h4 class="w3-center">Answers to What? Who? Where? When? Why? and How?</h4>
     <main>
         <div class="w3-row">
             <div class="w3-col m8 w3-padding contents-wrapper">
@@ -35,7 +36,6 @@
 
                     </ul>
                 </div>
-
             </div>
         </div>
     </main>
