--- a/index.html
+++ b/index.html
@@ -16,22 +16,56 @@
     <header>
         <a class="jumbo" href="/">Why5</a>
     </header>
-    <h4 class="w3-center">Answers to What? Who? Where? When? Why? and How?</h4>
+    <h4 class="w3-center">Answers to
+        <span class="w3-tag w3-section"> What? </span>
+        <span class="w3-tag  w3-section"> Who? </span>
+        <span class="w3-tag  w3-section"> Where? </span>
+        <span class="w3-tag  w3-section"> When? </span>
+        <span class="w3-tag  w3-section"> Why? </span> and
+        <span class="w3-tag  w3-section"> How? </span> </h4>
     <main>
         <div class="w3-row">
             <div class="w3-col m8 w3-padding contents-wrapper">
                 <div class="w3-padding contents-container">
+                    <div class="contents about w3-padding w3-margin w3-display-container">
+                        <h1> Our Aspiration </h1>
+                        <hr>
+                        <div class="w3-padding-large">
+                            <p class="w3-justify">
+                                Our primary goal is to acquire knowledge about various curiosities that hit us on our day to day lives <br> The knowledge acquisition is very highy valued as,
+                            </p>
+                            <q> 
+                                There is no wealth like knowledge, <br>
+                                and no poverty like ignorance.
+                            </q>
+                            <p class="w3-right-align">-Lord Buddha</p>
+                            <p class="w3-justify">
+                                Knowledge aquisition alone doesn't serves the purpose without sharing as,
+                            </p>
+                            <q>
+                                In vain have you <br>
+                                acquired knowledge <br>
+                                if you have not <br>
+                                imparted it to others.
+                            </q>
+                            <p class="w3-right-align">-Deuteronomy Rabbah</p>
+                            <p class="w3-justify">
+                                Thus we attempt to find answers to What? Who? Where? When? Why? and How? and provide them to you!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-padding contents-container">
 
                 </div>
             </div>
-            <div class="w3-col m4 w3-padding">
+            <div class="w3-col m4 w3-padding sidebar">
                 <div class="w3-padding w3-container">
                     <ul class="collection">
                         <li class="collection-item">
                             <input type="text" id="searchbox" onkeyup="listFilter()" placeholder="Search for posts..">
                         </li>
                     </ul>
-
                     <ul id="postlist" class="collection">
 
                     </ul>
@@ -39,6 +73,12 @@
             </div>
         </div>
     </main>
+    <footer class="w3-container w3-padding-large">
+        <div class="w3-padding">
+            <h4 class="w3-right-align"> &lt;/&gt; by <a href="http://ritvik19.github.io" target="_blank">Ritvik Rastogi</a></h4>
+        </div>
+
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
