--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
         <a class="jumbo" href="/">Why5</a>
     </header>
     <h4 class="w3-center">Answers to
-        <span class="w3-tag w3-section"> What? </span>
-        <span class="w3-tag  w3-section"> Who? </span>
-        <span class="w3-tag  w3-section"> Where? </span>
-        <span class="w3-tag  w3-section"> When? </span>
-        <span class="w3-tag  w3-section"> Why? </span> and
-        <span class="w3-tag  w3-section"> How? </span> </h4>
+        <span class="tag"> What </span> ?
+        <span class="tag "> Who </span> ?
+        <span class="tag "> Where </span> ?
+        <span class="tag "> When </span> ?
+        <span class="tag "> Why </span> ? and
+        <span class="tag "> How </span> ?</h4>
     <main>
         <div class="w3-row">
             <div class="w3-col m8 w3-padding contents-wrapper">
                 <div class="w3-padding contents-container">
                     <div class="contents about w3-padding w3-margin w3-display-container">
-                        <h1> Our Aspiration </h1>
-                        <hr>
+                        <h1 class="w3-padding-large"> Our Aspiration </h1>
                         <div class="w3-padding-large">
                             <p class="w3-justify">
                                 Our primary goal is to acquire knowledge about various curiosities that hit us on our day to day lives <br> The knowledge acquisition is very highy valued as,
