--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <span class="tag "> When </span> ?
         <span class="tag "> Why </span> ? and
         <span class="tag "> How </span> ?</h4>
+
     <main>
         <div class="w3-row">
             <div class="w3-col m8 w3-padding contents-wrapper">
@@ -71,6 +72,11 @@
     </main>
     <footer class="w3-container w3-padding-large">
         <div class="w3-padding">
+            <h3 class="w3-center">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSco7JB99SMxMhLHgPFWcH-G3F9Clx5AR87PkSxK5brbiuuHpw/viewform?usp=sf_link" target="_blank">
+                    Contribute
+                </a>
+            </h3>
             <h3 class="w3-right-align"> &lt;/&gt; by <a href="http://ritvik19.github.io" target="_blank">Ritvik Rastogi</a></h3>
         </div>
 
